After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712565 - Fix compilation's warnings
Fix compilation's warnings
Status: RESOLVED FIXED
Product: libgdata
Classification: Platform
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: libgdata-maint
libgdata-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-18 08:41 UTC by Fabiano Fidêncio
Modified: 2013-11-21 10:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tasks: Fix return values (6.35 KB, patch)
2013-11-18 08:42 UTC, Fabiano Fidêncio
committed Details | Review
demos: Fix GtkStock deprecated functions (1.59 KB, patch)
2013-11-18 08:42 UTC, Fabiano Fidêncio
needs-work Details | Review
core: Replace deprecated GStaticMutex with GMutex (2.14 KB, patch)
2013-11-18 08:42 UTC, Fabiano Fidêncio
committed Details | Review
core: Fix 'soup_gnome_features_2_26_get_type' is deprecated warning (1.20 KB, patch)
2013-11-18 08:42 UTC, Fabiano Fidêncio
needs-work Details | Review
tests: Replace g_test_trap_fork with g_test_trap_subprocess when glib is greater than 2.38.0 (1.21 KB, patch)
2013-11-18 08:43 UTC, Fabiano Fidêncio
committed Details | Review
Update .gitignore (3.17 KB, patch)
2013-11-18 09:00 UTC, Fabiano Fidêncio
rejected Details | Review
demos: Fix GtkStock deprecated functions (1.59 KB, patch)
2013-11-18 23:48 UTC, Fabiano Fidêncio
committed Details | Review
core: Fix 'soup_gnome_features_2_26_get_type' is deprecated warning (3.09 KB, patch)
2013-11-20 22:21 UTC, Fabiano Fidêncio
committed Details | Review

Description Fabiano Fidêncio 2013-11-18 08:41:32 UTC
See the attached patch
Comment 1 Fabiano Fidêncio 2013-11-18 08:42:45 UTC
Created attachment 260087 [details] [review]
tasks: Fix return values
Comment 2 Fabiano Fidêncio 2013-11-18 08:42:49 UTC
Created attachment 260088 [details] [review]
demos: Fix GtkStock deprecated functions
Comment 3 Fabiano Fidêncio 2013-11-18 08:42:53 UTC
Created attachment 260089 [details] [review]
core: Replace deprecated GStaticMutex with GMutex
Comment 4 Fabiano Fidêncio 2013-11-18 08:42:58 UTC
Created attachment 260090 [details] [review]
core: Fix 'soup_gnome_features_2_26_get_type' is deprecated warning
Comment 5 Fabiano Fidêncio 2013-11-18 08:43:02 UTC
Created attachment 260091 [details] [review]
tests: Replace g_test_trap_fork with g_test_trap_subprocess when glib is greater than 2.38.0
Comment 6 Fabiano Fidêncio 2013-11-18 09:00:51 UTC
Created attachment 260092 [details] [review]
Update .gitignore
Comment 7 Philip Withnall 2013-11-18 13:03:34 UTC
Review of attachment 260087 [details] [review]:

Go for it.
Comment 8 Philip Withnall 2013-11-18 13:04:50 UTC
Review of attachment 260088 [details] [review]:

This doesn’t bump our GTK+ dependency, so please commit with the changes below. Thanks.

::: demos/scrapbook/scrapbook.c
@@ +518,2 @@
 	/* OK button */
+	button = gtk_button_new_with_label ("Ok");

The label should be capitalised and use an underscore: "_OK".

@@ +589,3 @@
 	file_dialog = gtk_file_chooser_dialog_new ("Upload Photo", GTK_WINDOW (scrap_data->window), GTK_FILE_CHOOSER_ACTION_SAVE,
+	                                           "Cancel", GTK_RESPONSE_CANCEL,
+	                                           "Open", GTK_RESPONSE_ACCEPT,

These should also use underscores.
Comment 9 Philip Withnall 2013-11-18 13:09:24 UTC
Review of attachment 260089 [details] [review]:

This doesn’t actually require a GLib version bump, so please commit immediately. Thanks!
Comment 10 Philip Withnall 2013-11-18 13:14:09 UTC
Review of attachment 260090 [details] [review]:

Does the default libsoup proxy resolver happen to be GProxyResolverGnome when in a GNOME environment? I assume so.

Please amend the commit message to explain that the libsoup GNOME 2.26 feature was just the GNOME proxy resolver, which is now provided as a default GIO extension point. Then push it! Thanks.
Comment 11 Philip Withnall 2013-11-18 13:15:48 UTC
Review of attachment 260090 [details] [review]:

Actually, this means we can drop our libsoup-gnome dependency entirely. Please do so, and don’t forget to remove it from README. I guess the patch should be re-reviewed before pushing then.
Comment 12 Philip Withnall 2013-11-18 13:16:21 UTC
Review of attachment 260091 [details] [review]:

If this works and the tests still pass, please push.
Comment 13 Philip Withnall 2013-11-18 13:16:59 UTC
Review of attachment 260092 [details] [review]:

.gitignore should be being generated automatically by git.mk. Is that not working for you?
Comment 14 Fabiano Fidêncio 2013-11-18 13:19:16 UTC
(In reply to comment #13)
> Review of attachment 260092 [details] [review]:
> 
> .gitignore should be being generated automatically by git.mk. Is that not
> working for you?

Ouch! It's generating a broken .gitignore
I can see a lot of .defs and *.o not being ignored
Comment 15 Philip Withnall 2013-11-18 14:07:20 UTC
(In reply to comment #14)
> Ouch! It's generating a broken .gitignore
> I can see a lot of .defs and *.o not being ignored

Try updating git.mk from https://github.com/behdad/git.mk. If that doesn’t fix it, I guess you’ll have to debug git.mk itself. Might be something to do with subdir-objects.
Comment 16 Fabiano Fidêncio 2013-11-18 23:48:49 UTC
Created attachment 260180 [details] [review]
demos: Fix GtkStock deprecated functions
Comment 17 Fabiano Fidêncio 2013-11-18 23:51:03 UTC
Attachment 260087 [details] pushed as 24f58b8 (libgdata 0.15+)
Attachment 260089 [details] pushed as 52ebe1c (libgdata 0.15+)
Attachment 260180 [details] pushed as e419233 (libgdata 0.15+)
Comment 18 Fabiano Fidêncio 2013-11-19 23:30:43 UTC
(In reply to comment #15)
> 
> Try updating git.mk from https://github.com/behdad/git.mk. If that doesn’t fix
> it, I guess you’ll have to debug git.mk itself. Might be something to do with
> subdir-objects.

IIUC, you would need to have a Makefile per subfolder (as we have in evolution, for instance) to get git.mk working as expected.
I'll ignore this for now :-)
Comment 19 Fabiano Fidêncio 2013-11-20 22:21:12 UTC
Created attachment 260392 [details] [review]
core: Fix 'soup_gnome_features_2_26_get_type' is deprecated warning

GNOME 2.26 libsoup's feature was just the GNOME proxy resolver,
which is now provided as default GIO extension point.

More informations can be seen in:
[0]: https://git.gnome.org/browse/libsoup/commit/?id=4ded0924fd82e006f31a8e9089fd297fac15eef9
[1]: https://bugzilla.gnome.org/show_bug.cgi?id=573685
Comment 20 Philip Withnall 2013-11-21 00:41:27 UTC
Review of attachment 260392 [details] [review]:

Great, thanks!
Comment 21 Fabiano Fidêncio 2013-11-21 08:12:54 UTC
Comment on attachment 260392 [details] [review]
core: Fix 'soup_gnome_features_2_26_get_type' is deprecated warning

Attachment 260392 [details] pushed as 60e1cf1 (libgdata 0.15+)
Comment 22 Philip Withnall 2013-11-21 10:16:02 UTC
Comment on attachment 260091 [details] [review]
tests: Replace g_test_trap_fork with g_test_trap_subprocess when glib is greater than 2.38.0

This one wasn’t quite right; the new subprocess test needs to be declared using g_test_add(). Fixed and merged.

commit d663cbff8a733d0296e81dc84c3ae6a307cb9b58
Author: Fabiano Fidêncio <fidencio@redhat.com>
Date:   Mon Nov 18 09:38:45 2013 +0100

    tests: Replace g_test_trap_fork() with g_test_trap_subprocess()
    
    For GLib versions newer than 2.38.0. This continues to work for older
    versions, so the GLib dependency is not bumped.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=712565

 gdata/tests/client-login-authorizer.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)