tasks: Fix return values

https://bugzilla.gnome.org/show_bug.cgi?id=712565